# lotto

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/crawlers/: __init__.py  lotto_crawler.py  webdriver.py
src/db/: __init__.py  connection.py  queries.py
src/services/: __init__.py  check_winning_status.py  save_purchase_numbers.py  save_winning_numbers.py
src/utils/: lotto_rules.py
